--- a/AttendanceGenerator/Views/Home/Index.cshtml
+++ b/AttendanceGenerator/Views/Home/Index.cshtml
@@ -3,16 +3,32 @@
 }
 
 <div class="container">
-    <div class="row">
-        <form method="post" enctype="multipart/form-data">
-            <label>Select Panel</label>
-            <select name="panel" required>
-                <option value="Panel2">Panel 2</option>
-            </select>
-            <label>End Time</label>
-            <input type="time" name="EndTime" required/>
-            <input name="file" type="file" required/>
-            <button type="submit">Submit</button>
-        </form>
+    <div class="row mt-5 justify-content-center">
+        <div class="card col-sm-3">
+            <form class="card-body" method="post" enctype="multipart/form-data">
+                <div class="form-group form-row">
+                    <label for="panel" class="col-12">Select Panel</label>
+                    <select id="panel" class="form-control" name="panel" required>
+                        <option value="Panel2">Panel 2</option>
+                    </select>
+                </div>
+                <div class="form-group form-row">
+                    <label for="endTime" class="col-6">End Time</label>
+                    <input class="col-6" type="time" id="endTime" name="EndTime" required />
+                </div>
+                <div class="form-group form-row">
+                    <div class="form-check">
+                        <input id="time" class="form-check-input" type="radio" name="time" value="true" />
+                        <label for="time" class="form-check-label">Include Time</label>
+                    </div>
+                </div>
+                <div class="form-group form-row">
+                    <input class="form-control-file" name="file" type="file" required />
+                </div>
+                <div class="row justify-content-center">
+                    <button class="btn btn-primary" type="submit">Submit</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
