Radio changed to checkbox and Responsiveness added

--- a/AttendanceGenerator/Views/Home/Index.cshtml
+++ b/AttendanceGenerator/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="row mt-5 justify-content-center">
-        <div class="card col-sm-3">
+        <div class="card col col-sm-6">
             <form class="card-body" method="post" enctype="multipart/form-data">
                 <div class="form-group form-row">
                     <label for="panel" class="col-12">Select Panel</label>
@@ -18,7 +18,7 @@
                 </div>
                 <div class="form-group form-row">
                     <div class="form-check">
-                        <input id="time" class="form-check-input" type="radio" name="time" value="true" />
+                        <input id="time" class="form-check-input" type="checkbox" name="time" value="true" />
                         <label for="time" class="form-check-label">Include Time</label>
                     </div>
                 </div>
