--- a/AttendanceGenerator/Views/Home/Index.cshtml
+++ b/AttendanceGenerator/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="row mt-5 justify-content-center">
-        <div class="card col col-sm-6">
+        <div class="card col-10 col-sm-9 col-md-6 col-xl-3">
             <form class="card-body" method="post" enctype="multipart/form-data">
                 <div class="form-group form-row">
                     <label for="panel" class="col-12">Select Panel</label>
