--- a/AttendanceGenerator/Views/Home/Index.cshtml
+++ b/AttendanceGenerator/Views/Home/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Attendance Generator";
 }
-
 <div class="container">
     <div class="row mt-5 justify-content-center">
-        <div class="card col-10 col-sm-9 col-md-6 col-xl-4 bg-primary">
+        <div class="card col-10 col-sm-9 col-md-6 col-xl-4">
+            <div class="card-header justify-content-center">
+                <h2>Attendance Generator</h2>
+            </div>
             <form class="card-body" method="post" enctype="multipart/form-data">
                 <div class="form-group form-row">
                     <label for="panel" class="col-12">Select Panel</label>
