Some UI changes, Privacy links removed

--- a/AttendanceGenerator/wwwroot/css/site.css
+++ b/AttendanceGenerator/wwwroot/css/site.css
@@ -1,6 +1,11 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+
+.navbar {
+    background-color: crimson;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -20,7 +25,7 @@ a {
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #1b6ec2;
+  background-color: #d46422;
   border-color: #1861ac;
 }
 
@@ -29,6 +34,7 @@ a {
 html {
   font-size: 14px;
 }
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
