--- a/AttendanceGenerator/Views/Home/Index.cshtml
+++ b/AttendanceGenerator/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 <div class="container">
     <div class="row mt-5 justify-content-center">
         <div class="card col-10 col-sm-9 col-md-6 col-xl-4">
-            <div class="card-header justify-content-center">
-                <h2>Attendance Generator</h2>
+            <div class="card-header bg-primary">
+                <h4 class="text-center text-white">Attendance Generator</h4>
             </div>
             <form class="card-body" method="post" enctype="multipart/form-data">
                 <div class="form-group form-row">
@@ -30,7 +30,7 @@
                 <div class="row justify-content-center">
                     <button class="btn btn-primary" type="submit">Submit</button>
                 </div>
-            </form>
+            </form>          
         </div>
     </div>
 </div>
