--- a/AttendanceGenerator/Views/Home/Index.cshtml
+++ b/AttendanceGenerator/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
                 <label for="panel" class="col-12 ">Select Panel</label>
                 <select id="panel" class="form-control" name="panel" required>
                     <option value="Panel2">Panel 2</option>
+                    <option value="TYCSEPanel1">TYCSE Panel 1</option>
                 </select>
             </div>
             <div class="form-group form-row">
