All panels, IMLA and panel 3

--- a/AttendanceGenerator/Views/Home/Index.cshtml
+++ b/AttendanceGenerator/Views/Home/Index.cshtml
@@ -10,8 +10,12 @@
             <div class="form-group form-row">
                 <label for="panel" class="col-12 ">Select Panel</label>
                 <select id="panel" class="form-control" name="panel" required>
+                    <option value="Panel1">Panel 1</option>
                     <option value="Panel2">Panel 2</option>
+                    <option value="Panel3">Panel 3</option>
                     <option value="TYCSEPanel1">TYCSE Panel 1</option>
+                    <option value="IMLA">IMLA</option>
+                    <option value="FinalYearAllPanels">BE All Panels</option>
                 </select>
             </div>
             <div class="form-group form-row">
