--- a/AttendanceGenerator/Views/Home/Index.cshtml
+++ b/AttendanceGenerator/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
                 <label for="panel" class="col-12 ">Select Panel</label>
                 <select id="panel" class="form-control" name="panel" required>
                     <option value="T8-Panel1">T-8 TY Panel 1</option>
+                    <option value="T11-SPM-Panel1">T-11 SPM Panel 1</option>
                 </select>
             </div>
             <div class="form-group form-row">
