--- a/AttendanceGenerator/Views/Home/Index.cshtml
+++ b/AttendanceGenerator/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
                 <select id="panel" class="form-control" name="panel" required>
                     <option value="T8-Panel1">T-8 TY Panel 1</option>
                     <option value="T11-SPM-Panel1">T-11 SPM Panel 1</option>
+                    <option value="UIUXD-T11-Panel1">UIUXD T11 Panel 1</option>
                 </select>
             </div>
             <div class="form-group form-row">
