--- a/AttendanceGenerator/Views/Home/Index.cshtml
+++ b/AttendanceGenerator/Views/Home/Index.cshtml
@@ -14,6 +14,8 @@
                     <option value="T11-SPM-Panel1">T-11 SPM Panel 1</option>
                     <option value="UIUXD-T11-Panel1">UIUXD T11 Panel 1</option>
                     <option value="BSc">BSc</option>
+                    <option value="TYCSE-21">TYCSE-21</option>
+                    
                 </select>
             </div>
             <div class="form-group form-row">
